# auto_annotation

./: .env.example  .gitignore  README.md  README.md.backup  api_server.py  config.yaml  convert_bbox_format.py  debug_import.py  hf_login.py  main.py  main.py.backup  pyproject.toml  test_conversion.json  test_conversion.json.bak
.claude/: settings.local.json
src/: annotator.py  camera.py  motion_detector.py  utils.py
